@@ -72,7 +72,7 @@ export(
     getAnnotationHubOption, setAnnotationHubOption, 
     possibleDates, mcols,
     .httr_proxy, .hub_option_key, .db_close,
-    recordStatus, DispatchClassList
+    recordStatus, DispatchClassList, refreshHub
 )
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
