@@ -6,6 +6,7 @@ NEW FEATURES
     o (2.17.6) remove debugging message of loading resource (`AH: 1`) 
     o (2.17.5) system environment variable to control localHub option for
     creating hub based only on previously downloaded resources
+    o (2.17.9) Allow force redownload of Hub sqlite file with refreshHub
 
 BUG FIXES
 
